--- a/src/styles/ultra-futuristic.css
+++ b/src/styles/ultra-futuristic.css
@@ -72,6 +72,11 @@ body {
   overflow-x: hidden;
 }
 
+/* Background utility class */
+.bg-dark-void {
+  background-color: var(--dark-void);
+}
+
 /* Animated Background Grid */
 body::before {
   content: '';
